--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="texto_valor">Digite o valor que você gastou:</string>
     <string name="hint_valor">valor</string>
     <string name="texto_botao">Adicionar Gastos</string>
+    <string name="botao_mostrar">Mostrar Gastos</string>
 </resources>
